# findcrypt4-yara

./: pyproject.toml
findcrypt4/: __init__.py  __main__.py
findcrypt4/rules/: findcrypt4.rules
ida_plugin/: findcrypt4_ida_plugin.py
