[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["findcrypt4"]
include-package-data = true

[tool.setuptools.package-data]
findcrypt4 = ["rules/*"]

[tool.setuptools.package-dir]
findcrypt4 = "findcrypt4"

[project]
name = "findcrypt4"
description = "Python module to search for cryptographic materials in binary"
authors = [{ name = "Robin David", email = "dev.robin.david@gmail.com" }]
license = { text = "BSD 3-Clause License" }
readme = { file = "README.md", content-type = "text/markdown" }
version = '0.4'
requires-python = ">=3.9"
dependencies = [
    "lief",
    "rich-click",
    "yara-python"
]
classifiers = [
    'Topic :: Security',
    'Environment :: Console',
    'Operating System :: OS Independent',
]

[project.scripts]
findcrypt4 = 'findcrypt4.__main__:main'

[project.urls]
Homepage = "https://github.com/RobinDavid/findcrypt4-yara"
Repository = "https://github.com/RobinDavid/findcrypt4-yara"
Documentation = "https://diffing.quarkslab.com/differs/bindiff.html#python-bindiff"
"Bug Tracker" = "https://github.com/RobinDavid/findcrypt4-yara/issues"

[tool.black]
line-length = 100
target-version = ['py310']
